<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:id="@+id/idLLLecturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <!--text view for activity title-->
        <TextView
            android:gravity="center_horizontal"
            android:id="@+id/idTVTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lecturers_list"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <!--text view for our course name-->
        <TextView
            android:id="@+id/idTVLecturerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lecturer_name"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!--text view for our course description-->
        <TextView
            android:id="@+id/idTVLecturerDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lecturer_description"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
