<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp">
        <LinearLayout
            android:background="@drawable/gradientbackground"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <ImageView
                android:layout_marginTop="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/photocircle"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="21sp"/>
        </LinearLayout>
<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="400dp"-->
<!--            android:layout_height="120dp"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginTop="275dp">-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="horizontal"-->
<!--                android:weightSum="3">-->
<!--                <LinearLayout-->
<!--                    android:gravity="center"-->
<!--                    android:orientation="vertical"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:layout_height="match_parent">-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Photos"-->
<!--                        android:textSize="20sp"-->
<!--                        />-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="125"-->
<!--                        android:textStyle="bold"-->
<!--                        android:textSize="20sp"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:textColor="@color/color__primary"/>-->

<!--                </LinearLayout>-->
<!--                <LinearLayout-->
<!--                    android:gravity="center"-->
<!--                    android:orientation="vertical"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:layout_height="match_parent">-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Followers"-->
<!--                        android:textSize="20sp"-->
<!--                        />-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="1205"-->
<!--                        android:textStyle="bold"-->
<!--                        android:textSize="20sp"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:textColor="@color/color__primary"/>-->

<!--                </LinearLayout>-->
<!--                <LinearLayout-->
<!--                    android:gravity="center"-->
<!--                    android:orientation="vertical"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:layout_height="match_parent">-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Following"-->
<!--                        android:textSize="20sp"-->
<!--                        />-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="360"-->
<!--                        android:textStyle="bold"-->
<!--                        android:textSize="20sp"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:textColor="@color/color__primary"/>-->

<!--                </LinearLayout>-->
<!--            </LinearLayout>-->

<!--        </androidx.cardview.widget.CardView>-->
    </RelativeLayout>


    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_numbers_24"/>
            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/_1204045"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_email_24"/>
            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/user_gmail_com"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_phone_android_24"/>
            <TextView
                android:textStyle="bold"

                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/_266_225_225"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/idBtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/back"
        android:textColor="#fff" />

</LinearLayout>